<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PlayerActivity">

    <Toolbar
        android:id="@+id/songTitle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/toolbar_img"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="0dp"
                android:contentDescription="@string/toolbarimg" />

            <TextView
                android:id="@+id/toolbar_song_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="@dimen/appbar_padding_top"
                android:layout_marginEnd="0dp"
                android:layout_toEndOf="@+id/toolbar_img"
                android:textSize="14sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/toolbar_song_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="@dimen/appbar_padding_top"
                android:layout_toEndOf="@+id/toolbar_img"
                android:layout_below="@+id/toolbar_song_title"
                android:textSize="10sp"
                android:textStyle="normal"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>
    </Toolbar>

    <ImageView
        android:id="@+id/albumArt"
        android:layout_width="match_parent"
        android:layout_height="490dp"
        android:contentDescription="@string/imageDescribe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songTitle"
        android:scaleType="centerCrop"
        />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumArt" />

    <ImageButton
        android:id="@+id/play_pause"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/play_pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next"
        app:layout_constraintStart_toEndOf="@+id/prev"
        app:srcCompat="@drawable/play_button" />

    <ImageButton
        android:id="@+id/prev"
        style="@style/seek_button_style"
        android:layout_marginStart="60dp"
        android:contentDescription="@string/reverse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/prev_button"
        />

    <ImageButton
        android:id="@+id/next"
        style="@style/seek_button_style"
        android:layout_marginEnd="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/next_button"
        android:contentDescription="@string/forward" />

    <TextView
        android:id="@+id/timeElapsed"
        style="@style/timeTVs"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        />

    <TextView
        android:id="@+id/timeRemaining"
        style="@style/timeTVs"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />


</androidx.constraintlayout.widget.ConstraintLayout>