<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="60dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:layout_constraintBottom_toTopOf="@+id/musictabLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/musictabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/mediaPager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/songs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/songs" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/artists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artists" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genres" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/mediaPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintVertical_weight="1"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/musictabLayout"
            app:layout_constraintBottom_toBottomOf="parent">
        </androidx.viewpager.widget.ViewPager>

        </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/playBar"
        style="@style/Widget.MaterialComponents.BottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabAlignmentMode="end"
        app:fabCradleMargin="5dp"
        app:fabCradleRoundedCornerRadius="5dp"
        app:fabCradleVerticalOffset="5dp"
        app:layout_constraintBottom_toBottomOf="@id/constrainLayout"
        tools:ignore="BottomAppBar">

        <ImageView
            android:id="@+id/bottomBarImg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:contentDescription="@string/bottombarimg" />

        <TextView
            android:id="@+id/bottomBarTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:layout_marginEnd="0dp"
            android:layout_toEndOf="@+id/toolbar_img"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/bottomBarArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:layout_toEndOf="@+id/toolbar_img"
            android:layout_below="@+id/toolbar_song_title"
            android:textSize="10sp"
            android:textStyle="normal"
            android:layout_alignParentBottom="true"/>
    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mediaFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:src="@drawable/play_button"
        app:layout_anchor="@id/playBar"
        app:layout_constraintBottom_toTopOf="@+id/playBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="35dp" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>